--- a/trunk/BerryWeb/pom.xml
+++ b/trunk/BerryWeb/pom.xml
@@ -26,51 +26,13 @@
             <artifactId>weld-servlet</artifactId>
             <version>${weld-version}</version>
         </dependency>
- 		
-         
 
 		<dependency>
 			<groupId>log4j</groupId>
 			<artifactId>log4j</artifactId>
 			<version>1.2.17</version>
 		</dependency>
-            		 
-		
-		<!-- JETTY -->
-		 <!--  
-		<dependency>
-			<groupId>org.eclipse.jetty</groupId>
-			<artifactId>jetty-plus</artifactId>
-			<version>9.0.2.v20130417</version>
-			<scope>provided</scope>
-		</dependency>
-				
-       
-		  <dependency>
-			<groupId>org.jboss.seam.persistence</groupId>
-			<artifactId>seam-persistence-api</artifactId>
-			<version>${seam.persistence.version}</version>
-		</dependency>
-		
-		<dependency>
-			<groupId>org.jboss.seam.persistence</groupId>
-			<artifactId>seam-persistence-impl</artifactId>
-			<version>${seam.persistence.version}</version>
-		</dependency>
- 
- 		
-		<dependency>
-			<groupId>org.jboss.seam.solder</groupId>
-			<artifactId>seam-solder</artifactId>
-			<version>${seam.solder-version}</version>
-		</dependency>
 
-		<dependency>
-			<groupId>org.jboss.seam.xml</groupId>
-			<artifactId>seam-xml-config</artifactId>
-			<version>${seam.xml.version}</version>
-		</dependency>
--->	 
 		<dependency>
 			<groupId>org.hibernate</groupId>
 			<artifactId>hibernate-core</artifactId>
@@ -82,46 +44,25 @@
 			<artifactId>hibernate-c3p0</artifactId>
 			<version>${hibernate-core-version}</version>
 		</dependency>
-	<!--	
-		 <dependency>
-			<groupId>org.hibernate</groupId>
-			<artifactId>hibernate-annotations</artifactId>
-			<version>${hibernate-annotations-version}</version>
-		</dependency>
-		
-	
-		 <dependency>
-			<groupId>org.hibernate</groupId>
-			<artifactId>hibernate-validator</artifactId>
-			<version>${hibernate-validator-version}</version>
-		</dependency>
-		 
--->
-            
-		 
-		 
-		<!-- only for  test  -->
-		
 	
 		<dependency>
-			<groupId>hsqldb</groupId>
+			<groupId>org.hsqldb</groupId>
 			<artifactId>hsqldb</artifactId>
-			<version>1.8.0.10</version>
+			<version>2.2.9</version>
 		</dependency>
+            
 		
 		<dependency>
-	<groupId>commons-dbcp</groupId>
-	<artifactId>commons-dbcp</artifactId>
-	<version>20030825.184428</version>
-</dependency>
+			<groupId>commons-dbcp</groupId>
+			<artifactId>commons-dbcp</artifactId>
+			<version>20030825.184428</version>
+		</dependency>
             	 
 		<dependency>
-	<groupId>commons-pool</groupId>
-	<artifactId>commons-pool</artifactId>
-	<version>1.4</version>
-</dependency>
-
-           
+			<groupId>commons-pool</groupId>
+			<artifactId>commons-pool</artifactId>
+			<version>1.4</version>
+		</dependency>
 		
 	</dependencies>
 	<build>
@@ -148,8 +89,6 @@
 					<!-- webappDirectory>${JETTY_HOME}/webapps/${project.build.finalName}</webappDirectory -->
 				</configuration>
 			</plugin>
-
-
 
 		</plugins>
 	</build>
